export class Historialacademico{
    carrera
    materias = []
}